--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot for SAE House GroupMe to state the name of whoever's car is mentioned",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Robert Firstman",
   "license": "ISC",
