--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "curlrequest": "^1.0.1",
     "express": "^4.15.4",
+    "firebase": "^4.11.0",
     "insult-compliment": "^1.1.3"
   }
 }
