--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "curlrequest": "^1.0.1",
-    "docxtemplater": "^3.5.1",
     "express": "^4.15.4",
-    "firebase": "^4.11.0",
     "insult-compliment": "^1.1.3",
     "jszip": "^3.1.5",
-    "jszip-utils": "0.0.2",
     "mammoth": "^1.4.4",
+    "node-emoji": "^1.8.1",
     "weather-js": "^2.0.0"
   }
 }
