--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "insult-compliment": "^1.1.3",
     "jszip": "^3.1.5",
     "mammoth": "^1.4.4",
+    "mongodb": "^3.0.6",
+    "multer": "^1.3.0",
     "node-emoji": "^1.8.1",
     "weather-js": "^2.0.0"
   }
