--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "curlrequest": "^1.0.1",
     "express": "^4.15.4",
     "insult-compliment": "^1.1.3",
+    "insults": "^0.1.3",
     "jszip": "^3.1.5",
     "mammoth": "^1.4.4",
     "mongodb": "^3.0.7",
